--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,8 +7,9 @@
 <body>
     <h1 th:text="${msg}"/>
     <form method="post" th:action="@{/res}" th:object="${data}">
-
-
+        <label>Feld:</label>
+        <input type="text" th:field="*{feld}" /><br/>
+        <button type="submit">OK</button>
     </form>
 </body>
 </html>
